--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -77,7 +77,7 @@ jobs:
 
           # Run models full-refresh
           if [ ${#MODELS[@]} -gt 0 ]; then
-            CMD="build -s ${MODELS[*]} --vars '{\"ci_row_limit\": 1000}' --full-refresh"
+            CMD="build -s ${MODELS[*]} --vars '{ci_row_limit: 1000}' --full-refresh"
             echo ">>> Running: $CMD"
             docker run --rm \
               -e AWS_REGION=${{ secrets.AWS_REGION }} \
@@ -90,7 +90,7 @@ jobs:
               -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
               ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
 
-            CMD="build -s ${MODELS[*]},config.materialized:incremental --vars '{\"ci_row_limit\": 1000}'"
+            CMD="build -s ${MODELS[*]},config.materialized:incremental --vars '{ci_row_limit: 1000}'"
             echo ">>> Running: $CMD"
             docker run --rm \
               -e AWS_REGION=${{ secrets.AWS_REGION }} \
@@ -106,7 +106,7 @@ jobs:
 
           # Run seeds full-refresh
           if [ ${#SEEDS[@]} -gt 0 ]; then
-            CMD="seed -s ${SEEDS[*]} --vars '{\"ci_row_limit\": 1000}' --full-refresh"
+            CMD="seed -s ${SEEDS[*]} --vars '{ci_row_limit: 1000}' --full-refresh"
             echo ">>> Running: $CMD"
             docker run --rm \
               -e AWS_REGION=${{ secrets.AWS_REGION }} \
@@ -126,7 +126,7 @@ jobs:
           echo ">>> Handling deleted models/seeds"
           echo "${{ steps.changes.outputs.deleted }}"
 
-          CMD="build --empty --full-refresh --vars '{\"ci_row_limit\": 1000}'"
+          CMD="build --empty --full-refresh --vars '{ci_row_limit: 1000}'"
           echo ">>> Running: $CMD"
           docker run --rm \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
@@ -139,7 +139,7 @@ jobs:
             -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
 
-          CMD="build -s config.materialized:incremental --vars '{\"ci_row_limit\": 1000}'"
+          CMD="build -s config.materialized:incremental --vars '{ci_row_limit: 1000}'"
           echo ">>> Running: $CMD"
           docker run --rm \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
