--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -34,6 +34,7 @@ jobs:
           echo "Deleted files:"
           echo "$DELETED"
 
+          # Use multiline GitHub output syntax
           {
             echo "added_or_modified<<EOF"
             echo "$ADDED_MODIFIED"
@@ -65,33 +66,29 @@ jobs:
         run: |
           MODELS=()
           SEEDS=()
-
           while read -r path; do
             [ -z "$path" ] && continue
             if [[ "$path" == models/* ]]; then
-              MODELS+=("path:$path+")
+              MODELS+=("$path")
             elif [[ "$path" == seeds/* ]]; then
-              SEEDS+=("path:$path+")
+              SEEDS+=("$path")
             fi
           done <<< "${{ steps.changes.outputs.added_or_modified }}"
 
-          # Run models full-refresh
-          if [ ${#MODELS[@]} -gt 0 ]; then
-            CMD="build -s ${MODELS[*]} --vars '{ci_row_limit: 1000}' --full-refresh"
-            echo ">>> Running: $CMD"
-            docker run --rm \
-              -e AWS_REGION=${{ secrets.AWS_REGION }} \
-              -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
-              -e S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
-              -e POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} \
-              -e POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} \
-              -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
-              -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
-              -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
+          # Build dbt path arguments
+          MODEL_ARGS=()
+          for m in "${MODELS[@]}"; do
+            MODEL_ARGS+=("path:$m+")
+          done
 
-            CMD="build -s ${MODELS[*]},config.materialized:incremental --vars '{ci_row_limit: 1000}'"
-            echo ">>> Running: $CMD"
+          SEED_ARGS=()
+          for s in "${SEEDS[@]}"; do
+            SEED_ARGS+=("path:$s+")
+          done
+
+          # Full-refresh for models
+          if [ ${#MODEL_ARGS[@]} -gt 0 ]; then
+            echo ">>> Running dbt full-refresh build for models: ${MODELS[*]}"
             docker run --rm \
               -e AWS_REGION=${{ secrets.AWS_REGION }} \
               -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
@@ -101,13 +98,26 @@ jobs:
               -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
               -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
               -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci \
+              build -s "${MODEL_ARGS[@]}" --vars '{"ci_row_limit": 1000}' --full-refresh
+
+            echo ">>> Running dbt incremental check for models: ${MODELS[*]}"
+            docker run --rm \
+              -e AWS_REGION=${{ secrets.AWS_REGION }} \
+              -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
+              -e S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
+              -e POSTGRES_HOST=${{ secrets.POSTGRES_HOST }} \
+              -e POSTGRES_PORT=${{ secrets.POSTGRES_PORT }} \
+              -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+              -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+              -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci \
+              build -s "${MODEL_ARGS[@]},config.materialized:incremental" --vars '{"ci_row_limit": 1000}'
           fi
 
-          # Run seeds full-refresh
-          if [ ${#SEEDS[@]} -gt 0 ]; then
-            CMD="seed -s ${SEEDS[*]} --vars '{ci_row_limit: 1000}' --full-refresh"
-            echo ">>> Running: $CMD"
+          # Full-refresh for seeds
+          if [ ${#SEED_ARGS[@]} -gt 0 ]; then
+            echo ">>> Running dbt full-refresh for seeds: ${SEEDS[*]}"
             docker run --rm \
               -e AWS_REGION=${{ secrets.AWS_REGION }} \
               -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
@@ -117,17 +127,19 @@ jobs:
               -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
               -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
               -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
+              ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci \
+              seed -s "${SEED_ARGS[@]}" --vars '{"ci_row_limit": 1000}' --full-refresh
           fi
 
       - name: Run dbt for deleted models/seeds
         if: ${{ steps.changes.outputs.deleted != '' }}
         run: |
           echo ">>> Handling deleted models/seeds"
-          echo "${{ steps.changes.outputs.deleted }}"
+          echo "${{ steps.changes.outputs.deleted }}" | while read -r path; do
+            [ -z "$path" ] && continue
+            echo ">>> Deleted: $path"
+          done
 
-          CMD="build --empty --full-refresh --vars '{ci_row_limit: 1000}'"
-          echo ">>> Running: $CMD"
           docker run --rm \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
             -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
@@ -137,10 +149,9 @@ jobs:
             -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
             -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
             -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci \
+            build --empty --full-refresh --vars '{"ci_row_limit": 1000}'
 
-          CMD="build -s config.materialized:incremental --vars '{ci_row_limit: 1000}'"
-          echo ">>> Running: $CMD"
           docker run --rm \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
             -e S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
@@ -150,4 +161,5 @@ jobs:
             -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
             -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
             -e POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }} \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci $CMD
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:ci \
+            build -s config.materialized:incremental --vars '{"ci_row_limit": 1000}'
